--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -33,3 +33,17 @@
 .btn-border:hover:before {
   background: #fff;
 }
+
+.button_close {
+  border-radius: 4px;
+  margin-left: 18px;
+  margin-bottom: 8px;
+  padding-left: 18px;
+  padding-right: 18px;
+  border: none;
+  background-color: cadetblue;
+  color: white;
+  top: 5px;
+  right: 5px;
+  position: absolute;
+}
