--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-  <%= render 'shared/navbar' %>
+  <%#= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
 
-      <%= yield %>
+    <%= yield %>
 </body>
 
 </html>
